[gd_scene load_steps=8 format=3 uid="uid://bwnik3bhuu6jj"]

[ext_resource type="Script" uid="uid://do2wfyfswgyqp" path="res://PÁGINAS/pagina5.gd" id="1_88qd7"]
[ext_resource type="Texture2D" uid="uid://cnjoftl4vf4ia" path="res://IMAGENS/Páginas/5.png" id="2_hs47d"]
[ext_resource type="Texture2D" uid="uid://bpsgi7ekpmh3" path="res://IMAGENS/Botões/ligar_som.png" id="3_hs47d"]
[ext_resource type="Texture2D" uid="uid://dvkdxoe36ju13" path="res://IMAGENS/Botões/desligar_som.png" id="4_wui50"]
[ext_resource type="AudioStream" uid="uid://ct380i0s7w1hq" path="res://ÁUDIOS/página 5.wav" id="5_wui50"]
[ext_resource type="VideoStream" uid="uid://bgs2twajxli7i" path="res://IMAGENS/Página 5/movimento-estudantilll.ogv" id="6_88qd7"]
[ext_resource type="Texture2D" uid="uid://10cufygploso" path="res://IMAGENS/Página 5/play.png" id="7_jt8ew"]

[node name="PAG5" type="Node2D"]
position = Vector2(384, 512)
script = ExtResource("1_88qd7")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hs47d")

[node name="BotaoAnterior" type="TextureButton" parent="."]
offset_left = -340.0
offset_top = 396.0
offset_right = -114.0
offset_bottom = 454.0

[node name="BotaoProxima" type="TextureButton" parent="."]
offset_left = 130.0
offset_top = 397.0
offset_right = 355.0
offset_bottom = 454.0

[node name="BotaoSom" type="TextureButton" parent="."]
offset_left = 111.0
offset_top = -470.0
offset_right = 333.0
offset_bottom = -423.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_hs47d")
texture_pressed = ExtResource("4_wui50")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wui50")
autoplay = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = -384.0
offset_top = -70.0
offset_right = 1536.0
offset_bottom = 1010.0
scale = Vector2(0.4, 0.4)
stream = ExtResource("6_88qd7")

[node name="BotaoPlayPause" type="TextureButton" parent="."]
z_index = 7
offset_left = -319.99997
offset_top = -461.99997
offset_right = 192.00003
offset_bottom = 50.00003
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_jt8ew")
texture_pressed = ExtResource("7_jt8ew")
texture_hover = ExtResource("7_jt8ew")

[connection signal="pressed" from="BotaoAnterior" to="." method="_on_botao_anterior_pressed"]
[connection signal="pressed" from="BotaoProxima" to="." method="_on_botao_proxima_pressed"]
[connection signal="toggled" from="BotaoSom" to="." method="_on_botao_som_toggled"]
[connection signal="pressed" from="BotaoPlayPause" to="." method="_on_botao_play_pause_pressed"]
